# RealityLib

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt  main.c  realitylib_audio.h  realitylib_hands.c  realitylib_hands.h  realitylib_text.c  realitylib_text.h  realitylib_vr.c  realitylib_vr.h
app/src/main/audio/: android_audio_backend_oboe.cpp  android_audio_backend_oboe.h  audio_decoder.c  audio_decoder.h  audio_engine.c  audio_internal.h  audio_mixer.c  audio_mixer.h  audio_ringbuffer.c  audio_spatializer_simple.c  audio_spatializer_simple.h
app/src/main/examples/: README.md
app/src/main/examples/objectCreation/: interactive_scene.c
doc/: Architecture Layer.puml  Demo Game Design Doc.md  Ninja - Design Doc.md  allocation-simplified.md  allocation-view.md  draw.md  runtime-view-flowchart-code  runtime-view.md
scripts/: setup_deps.sh
